fix text truncate bug in forum list

--- a/projects/pwa/src/styles.scss
+++ b/projects/pwa/src/styles.scss
@@ -19,7 +19,7 @@
 .image-style-side {
   max-width: 50%;
   float: right;
-  // margin-left: var(--ck-image-style-spacing);
+  margin-left: var(--ck-image-style-spacing);
 
   margin-block-start:!important;
   margin-block-end:0!important;
